src/order_book_hls/solution1/.autopilot/db/priority_queue.pp.0.cpp.clang-tidy.loop-label.out.log
C:\HFT_PYNQZ1-Z2\src\order_book_hls\solution1\.autopilot\db\priority_queue.pp.0.cpp:29281:5: warning: Added loop label VITIS_LOOP_676_1:   [xilinx-label-all-loops]
    for (unsigned i = low; i != high+1; ++i) {
    ^~~
    VITIS_LOOP_676_1: 
C:\HFT_PYNQZ1-Z2\src\order_book_hls\solution1\.autopilot\db\priority_queue.pp.0.cpp:29281:5: note: FIX-IT applied suggested code changes
C:\HFT_PYNQZ1-Z2\src\order_book_hls\solution1\.autopilot\db\priority_queue.pp.0.cpp:29295:5: warning: Added loop label VITIS_LOOP_690_1:   [xilinx-label-all-loops]
    for (unsigned i = low; i != high+1; ++i) {
    ^~~
    VITIS_LOOP_690_1: 
C:\HFT_PYNQZ1-Z2\src\order_book_hls\solution1\.autopilot\db\priority_queue.pp.0.cpp:29295:5: note: FIX-IT applied suggested code changes
C:\HFT_PYNQZ1-Z2\src\order_book_hls\solution1\.autopilot\db\priority_queue.pp.0.cpp:29309:5: warning: Added loop label VITIS_LOOP_704_1:   [xilinx-label-all-loops]
    for (unsigned i = low; i != high+1; ++i) {
    ^~~
    VITIS_LOOP_704_1: 
C:\HFT_PYNQZ1-Z2\src\order_book_hls\solution1\.autopilot\db\priority_queue.pp.0.cpp:29309:5: note: FIX-IT applied suggested code changes
C:\HFT_PYNQZ1-Z2\src\order_book_hls\solution1\.autopilot\db\priority_queue.pp.0.cpp:30943:7: warning: Added loop label VITIS_LOOP_1248_1:   [xilinx-label-all-loops]
      for (i = 0; i < __N - 1; ++i) {
      ^~~
      VITIS_LOOP_1248_1: 
C:\HFT_PYNQZ1-Z2\src\order_book_hls\solution1\.autopilot\db\priority_queue.pp.0.cpp:30943:7: note: FIX-IT applied suggested code changes
C:\HFT_PYNQZ1-Z2\src\order_book_hls\solution1\.autopilot\db\priority_queue.pp.0.cpp:33150:9: error: Resource with core_name: RAM_1P_BRAM pragma is ignored, because this core doesn't exist at all  [clang-diagnostic-error]
#pragma HLS RESOURCE variable=bid core=RAM_1P_BRAM
        ^
C:\HFT_PYNQZ1-Z2\src\order_book_hls\solution1\.autopilot\db\priority_queue.pp.0.cpp:33156:9: error: Resource with core_name: RAM_1P_BRAM pragma is ignored, because this core doesn't exist at all  [clang-diagnostic-error]
#pragma HLS RESOURCE variable=ask core=RAM_1P_BRAM
        ^
C:\HFT_PYNQZ1-Z2\src\order_book_hls\solution1\.autopilot\db\priority_queue.pp.0.cpp:33162:9: error: Resource with core_name: RAM_1P_BRAM pragma is ignored, because this core doesn't exist at all  [clang-diagnostic-error]
#pragma HLS RESOURCE variable=bid_remove core=RAM_1P_BRAM
        ^
C:\HFT_PYNQZ1-Z2\src\order_book_hls\solution1\.autopilot\db\priority_queue.pp.0.cpp:33168:9: error: Resource with core_name: RAM_1P_BRAM pragma is ignored, because this core doesn't exist at all  [clang-diagnostic-error]
#pragma HLS RESOURCE variable=ask_remove core=RAM_1P_BRAM
        ^
C:\HFT_PYNQZ1-Z2\src\order_book_hls\solution1\.autopilot\db\priority_queue.pp.0.cpp:33174:9: error: Resource with core_name: RAM_2P_LUTRAM pragma is ignored, because this core doesn't exist at all  [clang-diagnostic-error]
#pragma HLS RESOURCE variable=hole_idx_bid core=RAM_2P_LUTRAM
        ^
C:\HFT_PYNQZ1-Z2\src\order_book_hls\solution1\.autopilot\db\priority_queue.pp.0.cpp:33176:9: error: Resource with core_name: RAM_2P_LUTRAM pragma is ignored, because this core doesn't exist at all  [clang-diagnostic-error]
#pragma HLS RESOURCE variable=hole_lvl_bid core=RAM_2P_LUTRAM
        ^
C:\HFT_PYNQZ1-Z2\src\order_book_hls\solution1\.autopilot\db\priority_queue.pp.0.cpp:33181:9: error: Resource with core_name: RAM_2P_LUTRAM pragma is ignored, because this core doesn't exist at all  [clang-diagnostic-error]
#pragma HLS RESOURCE variable=hole_idx_ask core=RAM_2P_LUTRAM
        ^
C:\HFT_PYNQZ1-Z2\src\order_book_hls\solution1\.autopilot\db\priority_queue.pp.0.cpp:33183:9: error: Resource with core_name: RAM_2P_LUTRAM pragma is ignored, because this core doesn't exist at all  [clang-diagnostic-error]
#pragma HLS RESOURCE variable=hole_lvl_ask core=RAM_2P_LUTRAM
        ^
C:\HFT_PYNQZ1-Z2\src\order_book_hls\solution1\.autopilot\db\priority_queue.pp.0.cpp:33188:9: error: Resource with core_name: RAM_2P_LUTRAM pragma is ignored, because this core doesn't exist at all  [clang-diagnostic-error]
#pragma HLS RESOURCE variable=hole_idx_bid_remove core=RAM_2P_LUTRAM
        ^
C:\HFT_PYNQZ1-Z2\src\order_book_hls\solution1\.autopilot\db\priority_queue.pp.0.cpp:33190:9: error: Resource with core_name: RAM_2P_LUTRAM pragma is ignored, because this core doesn't exist at all  [clang-diagnostic-error]
#pragma HLS RESOURCE variable=hole_lvl_bid_remove core=RAM_2P_LUTRAM
        ^
C:\HFT_PYNQZ1-Z2\src\order_book_hls\solution1\.autopilot\db\priority_queue.pp.0.cpp:33195:9: error: Resource with core_name: RAM_2P_LUTRAM pragma is ignored, because this core doesn't exist at all  [clang-diagnostic-error]
#pragma HLS RESOURCE variable=hole_idx_ask_remove core=RAM_2P_LUTRAM
        ^
C:\HFT_PYNQZ1-Z2\src\order_book_hls\solution1\.autopilot\db\priority_queue.pp.0.cpp:33197:9: error: Resource with core_name: RAM_2P_LUTRAM pragma is ignored, because this core doesn't exist at all  [clang-diagnostic-error]
#pragma HLS RESOURCE variable=hole_lvl_ask_remove core=RAM_2P_LUTRAM
        ^
C:\HFT_PYNQZ1-Z2\src\order_book_hls\solution1\.autopilot\db\priority_queue.pp.0.cpp:33245:17: warning: Added loop label VITIS_LOOP_407_1:   [xilinx-label-all-loops]
                while(bid[0][0].orderID == bid_remove[0][0].orderID && bid[0][0].orderID != 0){
                ^~~~~
                VITIS_LOOP_407_1: 
C:\HFT_PYNQZ1-Z2\src\order_book_hls\solution1\.autopilot\db\priority_queue.pp.0.cpp:33245:17: note: FIX-IT applied suggested code changes
C:\HFT_PYNQZ1-Z2\src\order_book_hls\solution1\.autopilot\db\priority_queue.pp.0.cpp:33292:17: warning: Added loop label VITIS_LOOP_454_2:   [xilinx-label-all-loops]
                while(ask[0][0].orderID == ask_remove[0][0].orderID && ask[0][0].orderID != 0){
                ^~~~~
                VITIS_LOOP_454_2: 
C:\HFT_PYNQZ1-Z2\src\order_book_hls\solution1\.autopilot\db\priority_queue.pp.0.cpp:33292:17: note: FIX-IT applied suggested code changes
